test/syntax/pass/causality/3.sync
let node g z = o where
  o = z + 1

let node causal_nodecall x = y where
  rec y = 0 fby g z
  and z = x + 1
