test/syntax/fail/not_combinatorial/let_let_rec.sync
let z =
  let rec x = 6
  and y = 3
  in x
